# backtest-engine

./: .gitignore  README.md  backtest.py  models.py  pyproject.toml
examples/: crossover.ipynb  crossover.json
