[project]
name = "backtest-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "tabulate>=0.9.0",
    "ujson>=5.11.0",
    "yfinance>=0.2.66",
]
