[project]
name = "backtest-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.5.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pandera[strategies]>=0.26.1",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "tabulate>=0.9.0",
    "ujson>=5.11.0",
    "yfinance>=0.2.66",
]
